--- a/assessments/assignment1/assignment1.ipynb
+++ b/assessments/assignment1/assignment1.ipynb
@@ -10,9 +10,13 @@
     "\n",
     "__Due__: Wednesday, March 7 at 10:00am (i.e., the start of Class Meeting 04).\n",
     "\n",
+    "__Attribution__: Most of these exercises are adapted from Michael Gelbart's DSCI 571 exercises and Mark Schmidt's CPSC 340 exercises.\n",
+    "\n",
     "## Instructions\n",
     "\n",
-    "You must use proper spelling and grammar."
+    "- You must use proper spelling and grammar.\n",
+    "- Add your responses to the questions in this very jupyter notebook. \n",
+    "- Submit your assignment through [UBC Connect](https://connect.ubc.ca/) by the deadline, being sure to upload your jupyter notebook file."
    ]
   },
   {
@@ -20,6 +24,7 @@
    "metadata": {},
    "source": [
     "## Exercise 1: $k$-NN Fundamentals\n",
+    "\n",
     "\n",
     "Here we will try classification of the famous handwritten digits data set. \n",
     "\n",
@@ -72,24 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x118d3e390>"
+       "<matplotlib.text.Text at 0x1112c6cc0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAEICAYAAAByNDmmAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADU9JREFUeJzt3X/sXfVdx/HXa1+gkxXaIGDwWzKIgyYo2ViwZumckx/a\nCXYLMRGUiWNJg4QFIskEIQb9Q/SfZkQNpGHMbRTIZJAsA7ewANlIHFJ+uK2UChSE1rGWbIwfUhH6\n8o97a74u3/aeb+85597vu89HcsP9ce55v0/Iq59zzvfc83ESAajpXZNuAEB3CDhQGAEHCiPgQGEE\nHCiMgAOFEfBFxPZ1tm/dz+ebbX90gev8ddtbx24OU4mATxHbr8957LH95pzXfzjq+0l+OcmDC6mZ\n5DtJVh5w0w3YPsX2Jts/GT6+ZfuULmtigIBPkSRL9z4kvSDpd+e8t3HS/Y3hPyX9vqSjh4+vSbpj\noh0dJAj44nOY7S/Zfm24S3763g9sP2/7rOHzVcNR81XbP7K9fr6V2f6o7e1zXv+Z7R3D9W+1feY+\nvneO7ceH63/R9nX7ajjJK0meTfKOJEt6R9L7DmzzsRAEfPFZq8Hot1yDkfDv97HcDZJuSHKkpF+S\n9JVRK7a9UtJlkn41yRGSflvS8/tY/A1JfzTs4xxJf2L7EyPW/4qk3ZL+TtJfj+oH4yPgi89DSe4d\njoZflvT+fSz3P5LeZ/voJK8n+W6Ddb8jaYmkU2wfmuT5JM/Ot2CSB5N8P8meJN+TdLuk39jfypMs\nl7RMg39EHm/QD8ZEwBefl+Y8/y9J77Z9yDzLfVrSyZKesv2I7XNHrTjJM5KukHSdpJ2277D9i/Mt\na/vXbD9ge5ftn0q6RIPj61E13pB0k6Qv2T521PIYDwEvKsnTSS6QdKykv5V0p+33NPjebUk+LOm9\nkjL87nxu0+AQ4fgkyzQIrRu29y5Jh0uabbg8DhABL8r2hbaPSbJH0ivDt/eM+M5K22fYXqLBsfKb\n+/nOEZJ+nGS37VWS/mA/6z3b9mm2Z2wfKWm9pJ9I2rLAzcICEfC61kjabPt1DU64nZ/kzRHfWSLp\nbyS9rMGhwLGSrt7HspdK+ivbr0n6C+3/JN5yDY7RfyrpWQ1O+q1JsrvhtuAAmRs+AHUxggOFEXCg\nMAIOFEbAgcLmu0BibLZLnrmbmZnptd6pp57aW60+t23Xrl291XrhhRd6q9W3JCOvO+jkLHrVgB91\n1FG91tu2bVtvtZYtW9ZbrRtvvLG3WpdeemlvtfrWJODsogOFEXCgMAIOFEbAgcIIOFAYAQcKI+BA\nYQQcKIyAA4U1CrjtNcNb6D5j+6qumwLQjpEBtz0j6R8kfUzSKZIuYFYKYHFoMoKvkvRMkm1J3tLg\nntwf77YtAG1oEvBZSS/Oeb1d89wN0/a64Uwam9pqDsB4Wvu5aJINkjZIdX9NBiw2TUbwHZKOn/N6\nxfA9AFOuScAfkXSS7RNtHybpfA1ueA9gyo3cRU/ytu3LJH1T0oykW5Js7rwzAGNrdAye5F5J93bc\nC4CWcSUbUBgBBwoj4EBhBBwojIADhRFwoDACDhTGzCYLcNJJJ/Va76abbuqt1saNG3urtX79+t5q\nLV++vLdafWNmE+AgR8CBwgg4UBgBBwoj4EBhBBwojIADhRFwoDACDhRGwIHCmsxscovtnbZ/0EdD\nANrTZAT/R0lrOu4DQAdGBjzJtyX9uIdeALSstZlNbK+TtK6t9QEYH1MXAYVxFh0ojIADhTX5M9nt\nkv5F0krb221/uvu2ALShydxkF/TRCID2sYsOFEbAgcIIOFAYAQcKI+BAYQQcKIyAA4W1di36weDp\np5/utd4ll1zSW62LLrqot1pLlizprdbBjhEcKIyAA4URcKAwAg4URsCBwgg4UBgBBwoj4EBhBBwo\njIADhTW5J9vxth+w/aTtzbYv76MxAONrci3625KuTPKY7SMkPWr7viRPdtwbgDE1mbroh0keGz5/\nTdIWSbNdNwZgfAv6NZntEySdJunheT5j6iJgyjQOuO2lkr4q6Yokr/7s50xdBEyfRmfRbR+qQbg3\nJrmr25YAtKXJWXRL+rykLUnWd98SgLY0GcFXS/qkpDNsPzF8/E7HfQFoQZOpix6S5B56AdAyrmQD\nCiPgQGEEHCiMgAOFEXCgMAIOFEbAgcIIOFAYc5NNsbVr1/ZW65prrumt1v33399brYMdIzhQGAEH\nCiPgQGEEHCiMgAOFEXCgMAIOFEbAgcIIOFBYk5suvtv2v9r+t+HURX/ZR2MAxtfkUtX/lnRGkteH\nt09+yPY/J/lux70BGFOTmy5G0uvDl4cOH0xsACwCTSc+mLH9hKSdku5LMu/URbY32d7UdpMADkyj\ngCd5J8kHJK2QtMr2r8yzzIYkpyc5ve0mARyYBZ1FT/KKpAckremmHQBtanIW/Rjby4fPf07S2ZKe\n6roxAONrchb9OElftD2jwT8IX0ny9W7bAtCGJmfRv6fBnOAAFhmuZAMKI+BAYQQcKIyAA4URcKAw\nAg4URsCBwgg4UJgHvwZteaU2PyddZFavXt1brXvuuae3WhdffHFvtSTprrvu6q1WEo9ahhEcKIyA\nA4URcKAwAg4URsCBwgg4UBgBBwoj4EBhBBwojIADhTUO+HDyg8dtc8NFYJFYyAh+uaQtXTUCoH1N\npy5aIekcSTd32w6ANjUdwT8n6bOS9uxrAeYmA6ZPk5lNzpW0M8mj+1uOucmA6dNkBF8taa3t5yXd\nIekM27d22hWAVowMeJKrk6xIcoKk8yXdn+TCzjsDMDb+Dg4U1mTywf+T5EFJD3bSCYDWMYIDhRFw\noDACDhRGwIHCCDhQGAEHCiPgQGFMXbQAO3bs6LXe7Oxsr/X6ct555/VW6/rrr++tliStXLmyt1pM\nXQQc5Ag4UBgBBwoj4EBhBBwojIADhRFwoDACDhRGwIHCCDhQWKNbNg3vqPqapHckvc2tkYHFYSH3\nZPvNJC931gmA1rGLDhTWNOCR9C3bj9peN98CTF0ETJ+mu+gfTrLD9rGS7rP9VJJvz10gyQZJG6S6\nPxcFFptGI3iSHcP/7pR0t6RVXTYFoB1NJh98j+0j9j6X9FuSftB1YwDG12QX/Rck3W177/K3JflG\np10BaMXIgCfZJun9PfQCoGX8mQwojIADhRFwoDACDhRGwIHCCDhQGAEHClvIz0XRsyuvvLK3Ws89\n91xvtc4666zeai1durS3WtOIERwojIADhRFwoDACDhRGwIHCCDhQGAEHCiPgQGEEHCiMgAOFNQq4\n7eW277T9lO0ttj/UdWMAxtf0WvQbJH0jye/ZPkzS4R32BKAlIwNue5mkj0j6Y0lK8pakt7ptC0Ab\nmuyinyhpl6Qv2H7c9s3D+6P/P0xdBEyfJgE/RNIHJd2Y5DRJb0i66mcXSrIhyelMLQxMjyYB3y5p\ne5KHh6/v1CDwAKbcyIAneUnSi7ZXDt86U9KTnXYFoBVNz6J/RtLG4Rn0bZI+1V1LANrSKOBJnpDE\nsTWwyHAlG1AYAQcKI+BAYQQcKIyAA4URcKAwAg4URsCBwpibbAFmZ2d7rbd169beap188sm91dq9\ne3dvta699treak0jRnCgMAIOFEbAgcIIOFAYAQcKI+BAYQQcKIyAA4URcKCwkQG3vdL2E3Mer9q+\noo/mAIxn5KWqSbZK+oAk2Z6RtEPS3R33BaAFC91FP1PSs0n+o4tmALRroT82OV/S7fN9YHudpHVj\ndwSgNY1H8OE90ddK+qf5PmfqImD6LGQX/WOSHkvyo66aAdCuhQT8Au1j9xzAdGoU8OF0wWdLuqvb\ndgC0qenURW9I+vmOewHQMq5kAwoj4EBhBBwojIADhRFwoDACDhRGwIHCCDhQmJO0v1J7l6SF/qT0\naEkvt97MdKi6bWzX5Lw3yTGjFuok4AfC9qaqv0Srum1s1/RjFx0ojIADhU1TwDdMuoEOVd02tmvK\nTc0xOID2TdMIDqBlBBwobCoCbnuN7a22n7F91aT7aYPt420/YPtJ25ttXz7pntpke8b247a/Pule\n2mR7ue07bT9le4vtD026p3FM/Bh8OJnCv2twS6jtkh6RdEGSJyfa2JhsHyfpuCSP2T5C0qOSPrHY\nt2sv238q6XRJRyY5d9L9tMX2FyV9J8nNwzsJH57klUn3daCmYQRfJemZJNuSvCXpDkkfn3BPY0vy\nwySPDZ+/JmmLpNnJdtUO2ysknSPp5kn30ibbyyR9RNLnJSnJW4s53NJ0BHxW0otzXm9XkSDsZfsE\nSadJeniynbTmc5I+K2nPpBtp2YmSdkn6wvDw4+bhDUcXrWkIeGm2l0r6qqQrkrw66X7GZftcSTuT\nPDrpXjpwiKQPSroxyWmS3pC0qM8JTUPAd0g6fs7rFcP3Fj3bh2oQ7o1JqtxyerWktbaf1+Bw6gzb\nt062pdZsl7Q9yd49rTs1CPyiNQ0Bf0TSSbZPHJ7UOF/S1ybc09hsW4NjuS1J1k+6n7YkuTrJiiQn\naPD/6v4kF064rVYkeUnSi7ZXDt86U9KiPim60MkHW5fkbduXSfqmpBlJtyTZPOG22rBa0iclfd/2\nE8P3/jzJvRPsCaN9RtLG4WCzTdKnJtzPWCb+ZzIA3ZmGXXQAHSHgQGEEHCiMgAOFEXCgMAIOFEbA\ngcL+F/NfbvE7oSNbAAAAAElFTkSuQmCC\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAEICAYAAAByNDmmAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADXlJREFUeJzt3X3MXnV9x/HPZ+XBIVhSHhqkILC5TjARDHQxOKYwGQoB\nki0LLGhmXLqHlEBY4mBpFhz7Y0sGkWSLS4c4HE8RhMQYpmCEIclgtIDU0pYhVGgjFgLloVNry2d/\nXFddNffd69y9zjnXdX95v5I7XA+/6/y+F/C5f+ec+5zfz0kEoKZfmXQBALpDwIHCCDhQGAEHCiPg\nQGEEHCiMgM8jtq+2ffNe3l9n+yNz3OZv2944dnGYSvtNugD8P9tv7vH0IEk/lbRr+PxPR30+yUlz\n7TPJdyQtnevn5sr2QZL+UdIfStpf0neTnNF1v293BHyKJDl492PbmyT9SZJv7fHa1RMoqy2rNPj/\n7X2SXpF08mTLeXtgF33+OcD2l22/MdwlP3X3G7Y32f7d4eNltlfbft32j2xfN9PGbH/E9uY9nv+V\n7S3D7W+0fdYsnzvX9uPD7b+wt18+tn9T0vmSlid5KcmuJGv28ftjDgj4/HO+pNslHSrpa5L+aZZ2\n10u6Psm7JP2apK+M2rDtpZJWSDotySGSfk/Splmab5f0qWEd50r6c9sXztJ2maQfSPqc7Zdtr7X9\n+6PqwfgI+PzzUJJ7kuyS9O+SPjBLu59J+nXbhyd5M8nDDba9S9KBkk60vX+STUm+P1PDJA8kWZvk\nrSRPSrpN0u/Mst0lkt4v6TVJ79bgl8hNtt/XoCaMgYDPPy/u8fh/Jb3D9kznUj4j6TckbbD9qO3z\nRm04yTOSLpd0taSttm+3/e6Z2tr+Ldv3237J9muS/kzS4bNs+sca/ML5uyQ7kvynpPslnT2qJoyH\ngBeV5H+SXCzpSEn/IOlO2+9s8Llbk3xY0nskZfjZmdyqwSHCMUkWSvoXSZ6l7ZMzdTWqFoyPgBdl\n+xLbRyR5S9K24ctvjfjMUttn2j5Q0k80GHln+8whkl5J8hPbyyT90V42/aCk5yVdZXs/26dL+qik\nb87hK2EfEPC6zpG0bvi39eslXZTkxyM+c6Ckv5f0sgaHAkdKumqWtn8h6W9tvyHpb7SXk3hJfibp\nAkmf0OA4/F8lfSrJhuZfB/vCTPgA1MUIDhRGwIHCCDhQGAEHCuvkZhPbJc/cLViwoNf+TjppzjeH\n7bPnn3++t762bds2uhFGSjLbdQc/18lZ9KoBX7RoUa/9rV27tre+Lr300t76uuuuu3rrq7ImAWcX\nHSiMgAOFEXCgMAIOFEbAgcIIOFAYAQcKI+BAYQQcKKxRwG2fM5xC9xnbV3ZdFIB2jAy47QWS/lnS\nxyWdKOli2yd2XRiA8TUZwZdJeibJs0l2aDAn9wXdlgWgDU0CfrSkF/Z4vnn42i+wvXy4ksbqtooD\nMJ7WbhdNskqD9afK3k0GzDdNRvAtko7Z4/mS4WsAplyTgD8q6b22j7d9gKSLNJjwHsCUG7mLnmSn\n7RUaTFK/QNKNSdZ1XhmAsTU6Bk9yj6R7Oq4FQMu4kg0ojIADhRFwoDACDhRGwIHCCDhQGAEHCutk\n6aKqLrzwwl7763MllT5XUUF/GMGBwgg4UBgBBwoj4EBhBBwojIADhRFwoDACDhRGwIHCCDhQWJOV\nTW60vdX29/ooCEB7mozg/ybpnI7rANCBkQFP8qCkV3qoBUDLWrubzPZyScvb2h6A8bF0EVAYZ9GB\nwgg4UFiTP5PdJum/JC21vdn2Z7ovC0AbmqxNdnEfhQBoH7voQGEEHCiMgAOFEXCgMAIOFEbAgcII\nOFCYk/YvG696LfrGjRt77e+OO+7ora+VK1f21hfakcSj2jCCA4URcKAwAg4URsCBwgg4UBgBBwoj\n4EBhBBwojIADhRFwoLAmc7IdY/t+20/ZXmf7sj4KAzC+JvOi75T0l0kes32IpDW270vyVMe1ARhT\nk6WLfpjkseHjNyStl3R014UBGN+cVjaxfZykUyQ9MsN7LF0ETJnGAbd9sKSvSro8yeu//D5LFwHT\np9FZdNv7axDuW5Lc1W1JANrS5Cy6JX1R0vok13VfEoC2NBnBT5f0SUln2n5i+POJjusC0IImSxc9\nJGnk1DAApg9XsgGFEXCgMAIOFEbAgcIIOFAYAQcKI+BAYQQcKGxOd5O93S1evLjX/l599dVe+0M9\njOBAYQQcKIyAA4URcKAwAg4URsCBwgg4UBgBBwoj4EBhTSZdfIft/7b93eHSRZ/rozAA42tyqepP\nJZ2Z5M3h9MkP2f6PJA93XBuAMTWZdDGS3hw+3X/4w8IGwDzQdOGDBbafkLRV0n1JZly6yPZq26vb\nLhLAvmkU8CS7kpwsaYmkZbbfP0ObVUlOTXJq20UC2DdzOoueZJuk+yWd0005ANrU5Cz6EbYPHT7+\nVUkfk7Sh68IAjK/JWfSjJN1ke4EGvxC+kuTr3ZYFoA1NzqI/qcGa4ADmGa5kAwoj4EBhBBwojIAD\nhRFwoDACDhRGwIHCCDhQmAd3g7a8Ubvk7aRd/Lvam6effrq3vo499tje+urTtdde22t/K1eu7K2v\nJB7VhhEcKIyAA4URcKAwAg4URsCBwgg4UBgBBwoj4EBhBBwojIADhTUO+HDxg8dtM+EiME/MZQS/\nTNL6rgoB0L6mSxctkXSupBu6LQdAm5qO4J+X9FlJb83WgLXJgOnTZGWT8yRtTbJmb+1YmwyYPk1G\n8NMlnW97k6TbJZ1p++ZOqwLQipEBT3JVkiVJjpN0kaRvJ7mk88oAjI2/gwOFNVl88OeSPCDpgU4q\nAdA6RnCgMAIOFEbAgcIIOFAYAQcKI+BAYQQcKIyli+Zg27Ztky6hM9dcc01vfT333HO99XXjjTf2\n1pcknXDCCb3089prr2nnzp0sXQS8nRFwoDACDhRGwIHCCDhQGAEHCiPgQGEEHCiMgAOFEXCgsEZT\nNg1nVH1D0i5JO5kaGZgf5jIn20eTvNxZJQBaxy46UFjTgEfSt2yvsb18pgYsXQRMn6a76B9OssX2\nkZLus70hyYN7NkiyStIqqe7tosB802gET7Jl+M+tku6WtKzLogC0o8nig++0fcjux5LOlvS9rgsD\nML4mu+iLJd1te3f7W5N8o9OqALRiZMCTPCvpAz3UAqBl/JkMKIyAA4URcKAwAg4URsCBwgg4UBgB\nBwqby+2ib3v33ntvr/2dffbZvfX18MMP99bX4sWLe+urb4cddlgv/Wzfvr1RO0ZwoDACDhRGwIHC\nCDhQGAEHCiPgQGEEHCiMgAOFEXCgMAIOFNYo4LYPtX2n7Q2219v+UNeFARhf02vRr5f0jSR/YPsA\nSQd1WBOAlowMuO2Fks6Q9MeSlGSHpB3dlgWgDU120Y+X9JKkL9l+3PYNw/nRfwFLFwHTp0nA95P0\nQUlfSHKKpO2SrvzlRklWJTmVpYWB6dEk4JslbU7yyPD5nRoEHsCUGxnwJC9KesH20uFLZ0l6qtOq\nALSi6Vn0SyXdMjyD/qykT3dXEoC2NAp4kickcWwNzDNcyQYURsCBwgg4UBgBBwoj4EBhBBwojIAD\nhRFwoDAnaX+jdvsbnQKLFi3qtb8rrriit75WrFjRW18LFy7sra/Vq/u9ufG0007rra8kHtWGERwo\njIADhRFwoDACDhRGwIHCCDhQGAEHCiPgQGEEHChsZMBtL7X9xB4/r9u+vI/iAIxn5JxsSTZKOlmS\nbC+QtEXS3R3XBaAFc91FP0vS95P8oItiALSr6bTJu10k6baZ3rC9XNLysSsC0JrGI/hwTvTzJd0x\n0/ssXQRMn7nson9c0mNJftRVMQDaNZeAX6xZds8BTKdGAR8uF/wxSXd1Ww6ANjVdumi7pMM6rgVA\ny7iSDSiMgAOFEXCgMAIOFEbAgcIIOFAYAQcKI+BAYV0tXfSSpLneUnq4pJdbL2Y6VP1ufK/JeU+S\nI0Y16iTg+8L26qp3olX9bnyv6ccuOlAYAQcKm6aAr5p0AR2q+t34XlNuao7BAbRvmkZwAC0j4EBh\nUxFw2+fY3mj7GdtXTrqeNtg+xvb9tp+yvc72ZZOuqU22F9h+3PbXJ11Lm2wfavtO2xtsr7f9oUnX\nNI6JH4MPF1N4WoMpoTZLelTSxUmemmhhY7J9lKSjkjxm+xBJayRdON+/1262r5B0qqR3JTlv0vW0\nxfZNkr6T5IbhTMIHJdk26br21TSM4MskPZPk2SQ7JN0u6YIJ1zS2JD9M8tjw8RuS1ks6erJVtcP2\nEknnSrph0rW0yfZCSWdI+qIkJdkxn8MtTUfAj5b0wh7PN6tIEHazfZykUyQ9MtlKWvN5SZ+V9Nak\nC2nZ8ZJekvSl4eHHDcMJR+etaQh4abYPlvRVSZcneX3S9YzL9nmStiZZM+laOrCfpA9K+kKSUyRt\nlzSvzwlNQ8C3SDpmj+dLhq/Ne7b31yDctySpMuX06ZLOt71Jg8OpM23fPNmSWrNZ0uYku/e07tQg\n8PPWNAT8UUnvtX388KTGRZK+NuGaxmbbGhzLrU9y3aTraUuSq5IsSXKcBv+tvp3kkgmX1YokL0p6\nwfbS4UtnSZrXJ0Xnuvhg65LstL1C0jclLZB0Y5J1Ey6rDadL+qSktbafGL7210numWBNGO1SSbcM\nB5tnJX16wvWMZeJ/JgPQnWnYRQfQEQIOFEbAgcIIOFAYAQcKI+BAYQQcKOz/AMI2cpbY1YCbAAAA\nAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x118d298d0>"
+       "<matplotlib.figure.Figure at 0x1111e7828>"
       ]
      },
      "metadata": {},
@@ -262,16 +267,6 @@
     "__This question is worth no marks.__\n",
     "\n",
     "Now, add noise to the training data: for each example, with probability 20% replace the training label with a label selected uniformly at random. Remake the plot vs. $k$. What do you observe? Is there a generalizable insight here?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "-----------------\n",
-    "__Attribution__: Much of this material is from Mark Schmidt via CPSC 340."
    ]
   },
   {
