--- a/assessments/assignment1/assignment1.ipynb
+++ b/assessments/assignment1/assignment1.ipynb
@@ -10,9 +10,12 @@
     "\n",
     "__Due__: Wednesday, March 7 at 10:00am (i.e., the start of Class Meeting 04).\n",
     "\n",
-    "__Attribution__: Many of these exercises are adapted from Michael Gelbart's DSCI 571 exercises and Mark Schmidt's CPSC 340 exercises.\n",
+    "__Rubrics__: The MDS rubrics provide a good guide as to what is expected of you in your responses to the assignment questions. In particular, here are the most relevant ones:\n",
     "\n",
-    "## Instructions\n",
+    "- [code rubric](https://github.com/UBC-MDS/public/blob/master/rubric/rubric_code.md), for evaluating your code.\n",
+    "- [reasoning rubric](https://github.com/UBC-MDS/public/blob/master/rubric/rubric_reasoning.md), for evaluating your written responses.\n",
+    "\n",
+    "## Instructions (5%)\n",
     "\n",
     "- You must use proper spelling and grammar.\n",
     "- Add your responses to the questions in this very jupyter notebook. \n",
@@ -23,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1: $k$-NN Fundamentals\n",
+    "## Exercise 1: $k$-NN Fundamentals (20%)\n",
     "\n",
     "\n",
     "Here we will try classification of the famous handwritten digits data set. \n",
@@ -78,14 +81,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.text.Text at 0x1148a70b8>"
+       "<matplotlib.text.Text at 0x11a699240>"
       ]
      },
      "execution_count": 3,
@@ -94,9 +95,9 @@
     },
     {
      "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAEICAYAAAByNDmmAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADXJJREFUeJzt3X/sXfVdx/HXy/JjjvKrAgYoAXTYBA0bC1SXTpzgpIPK\n9oeQIsw4ZhohLBCNEwwxqCHRP2hGMrKlYbA5CmQwSJalbGEBMiAOCwXpSsF2BKXNWKENUhgDoS//\n+N6a7+a3/Z5v7znn3vvu85HccH+cez7vE/Lq+fE99/N2EgGo6ZdGXQCA7hBwoDACDhRGwIHCCDhQ\nGAEHCiPgE8T29bZv38vnG2x/bI7r/F3bzw9dHMYSAR8jtt+Y9thl+61pry+Z7ftJfjPJw3MZM8kj\nSRbtc9EN2P4d2w/Y3mH7Fdt32z62yzExhYCPkSTzdz8k/ZekP5r23upR1zeEIyWtknSSpBMl7ZR0\n2ygL2l8Q8MlzkO1/sb1zcEh+xu4PbL9o+w8GzxfbfsL267Z/YnvlTCuz/THbW6a9/hvbWwfrf972\nOXv43vm2nxqs/yXb1++p4CT3J7k7yetJfirpi5KW7OP2Yw4I+OS5QNJdko6Q9C1NhWUmN0m6Kclh\nkn5d0jdmW7HtRZKulHRmkkMlnSvpxT0s/qakPx3Ucb6ky21/quE2nCVpQ8NlMQQCPnkeTbImyXuS\nvi7pg3tY7n8kfcD2UUneSPKDBut+T9LBkk61fWCSF5P8aKYFkzycZH2SXUmekXSnpN+bbQDbp0n6\nO0l/3aAeDImAT56Xpz3/qaT32T5ghuU+K+k3JD1ne63tZbOtOMlmSVdLul7SNtt32T5upmVt/7bt\nhwYXzf5b0l9IOmpv67f9AUn3S7oqySOz1YPhEfCikmxKcrGkYyT9s6R7bB/S4Ht3JPmopi6GZfDd\nmdyhqVOEE5IcLunLkryn9do+UdL3JP1jkq/PaWOwzwh4UbYvtX10kl2SXhu8vWuW7yyyfbbtgyX9\nTNJbe/nOoZJ2JPmZ7cWS/mQv6z1e0oOSvpjky3PdFuw7Al7XUkkbbL+hqQtuy5O8Nct3Dpb0T5Je\n1dSpwDGSrt3DsldI+gfbOzV1Tr23i3h/LunXJF0//W/9zTcF+8pM+ADUxR4cKIyAA4URcKAwAg4U\nNtMNEkOzXfLK3XHHzXjPR2eOPPLIXsfry+bNm3sb6+233+5trL4l2eN9B7t1EvCqrrjiil7Hu/DC\nC3sdry/Lls16U11rNm3a1NtY44hDdKAwAg4URsCBwgg4UBgBBwoj4EBhBBwojIADhRFwoLBGAbe9\ndDCF7mbb13RdFIB2zBpw2/Mk3SzpE5JOlXSx7VO7LgzA8JrswRdL2pzkhSTvaGpO7k92WxaANjQJ\n+PGSXpr2esvgvZ9je8Wgk8YTbRUHYDit/ZosySpN9Z8q+3NRYNI02YNvlXTCtNcLB+8BGHNNAr5W\n0im2T7Z9kKTlmprwHsCYm/UQPcm7tq+U9F1J8yTdmoTGccAEaHQOnmSNpDUd1wKgZdzJBhRGwIHC\nCDhQGAEHCiPgQGEEHCiMgAOFddIfvM970S+77LK+htLNN9/c21iSdN111/U21nnnndfbWNu3b+9t\nrIsuuqi3sfrWpHURe3CgMAIOFEbAgcIIOFAYAQcKI+BAYQQcKIyAA4URcKAwAg4U1qSzya22t9n+\nYR8FAWhPkz34VyUt7bgOAB2YNeBJvi9pRw+1AGhZa51NbK+QtKKt9QEYHq2LgMK4ig4URsCBwpr8\nmexOSf8qaZHtLbY/231ZANrQpDfZxX0UAqB9HKIDhRFwoDACDhRGwIHCCDhQGAEHCiPgQGGt3Ys+\nKpdffnlvY11yySW9jSVJ9957b29jLV++vLex1qxZ09tY+zv24EBhBBwojIADhRFwoDACDhRGwIHC\nCDhQGAEHCiPgQGEEHCisyZxsJ9h+yPaztjfYvqqPwgAMr8m96O9K+qsk62wfKulJ2w8kebbj2gAM\nqUnroh8nWTd4vlPSRknHd10YgOHN6ddktk+SdLqkx2f4jNZFwJhpHHDb8yV9U9LVSV7/xc9pXQSM\nn0ZX0W0fqKlwr07S34+UAQylyVV0S/qKpI1JVnZfEoC2NNmDL5H0aUln23568Div47oAtKBJ66JH\nJbmHWgC0jDvZgMIIOFAYAQcKI+BAYQQcKIyAA4URcKAwAg4U5qT934X0+WOTJUuW9DWUHnvssd7G\nkqRTTjmlt7GeeeaZ3sY67bTTehtr06ZNvY3VtySz3oDGHhwojIADhRFwoDACDhRGwIHCCDhQGAEH\nCiPgQGEEHCisyaSL77P9b7b/fdC66O/7KAzA8JrMi/62pLOTvDGYPvlR2/cn+UHHtQEYUpNJFyPp\njcHLAwcPGhsAE6Bp44N5tp+WtE3SA0lmbF1k+wnbT7RdJIB90yjgSd5L8iFJCyUttv1bMyyzKskZ\nSc5ou0gA+2ZOV9GTvCbpIUlLuykHQJuaXEU/2vYRg+e/LOnjkp7rujAAw2tyFf1YSV+zPU9T/yB8\nI8m3uy0LQBuaXEV/RlM9wQFMGO5kAwoj4EBhBBwojIADhRFwoDACDhRGwIHCCDhQ2MS3LurTggUL\neh1v/fr1vY21cuXK3sa68cYbexurMloXAfs5Ag4URsCBwgg4UBgBBwoj4EBhBBwojIADhRFwoDAC\nDhTWOOCD5gdP2WbCRWBCzGUPfpWkjV0VAqB9TVsXLZR0vqRbui0HQJua7sG/IOnzknbtaQF6kwHj\np0lnk2WStiV5cm/L0ZsMGD9N9uBLJF1g+0VJd0k62/btnVYFoBWzBjzJtUkWJjlJ0nJJDya5tPPK\nAAyNv4MDhTVpPvh/kjws6eFOKgHQOvbgQGEEHCiMgAOFEXCgMAIOFEbAgcIIOFAYrYvmYO3ataMu\noTPnnntub2Pt2LGjt7Eqo3URsJ8j4EBhBBwojIADhRFwoDACDhRGwIHCCDhQGAEHCiPgQGGNpmwa\nzKi6U9J7kt5lamRgMsxlTrbfT/JqZ5UAaB2H6EBhTQMeSd+z/aTtFTMtQOsiYPw0PUT/aJKtto+R\n9IDt55J8f/oCSVZJWiXV/bkoMGka7cGTbB38d5uk+yQt7rIoAO1o0nzwENuH7n4u6Q8l/bDrwgAM\nr8kh+q9Kus/27uXvSPKdTqsC0IpZA57kBUkf7KEWAC3jz2RAYQQcKIyAA4URcKAwAg4URsCBwgg4\nUNjEty5asGBBX0Np+/btvY0lSTfccENvY61bt663sfq0fv36XsfbtGlTb2PRugjYzxFwoDACDhRG\nwIHCCDhQGAEHCiPgQGEEHCiMgAOFEXCgsEYBt32E7XtsP2d7o+2PdF0YgOE1nRf9JknfSfLHtg+S\n9P4OawLQklkDbvtwSWdJ+jNJSvKOpHe6LQtAG5ocop8s6RVJt9l+yvYtg/nRfw6ti4Dx0yTgB0j6\nsKQvJTld0puSrvnFhZKsSnIGrYWB8dEk4FskbUny+OD1PZoKPIAxN2vAk7ws6SXbiwZvnSPp2U6r\nAtCKplfRPydp9eAK+guSPtNdSQDa0ijgSZ6WxLk1MGG4kw0ojIADhRFwoDACDhRGwIHCCDhQGAEH\nCiPgQGET35usT2vXru11vMMOO6y3sebPn9/bWIcc8v9+jNiZPnuFSdKZZ57Z21j0JgP2cwQcKIyA\nA4URcKAwAg4URsCBwgg4UBgBBwoj4EBhswbc9iLbT097vG776j6KAzCcWedkS/K8pA9Jku15krZK\nuq/jugC0YK6H6OdI+lGS/+yiGADtajpt8m7LJd050we2V0haMXRFAFrTeA8+mBP9Akl3z/Q5rYuA\n8TOXQ/RPSFqX5CddFQOgXXMJ+MXaw+E5gPHUKOCDdsEfl3Rvt+UAaFPT1kVvSvqVjmsB0DLuZAMK\nI+BAYQQcKIyAA4URcKAwAg4URsCBwgg4UFhXrYtekTTXn5QeJenV1osZD1W3je0anROTHD3bQp0E\nfF/YfqLqL9GqbhvbNf44RAcKI+BAYeMU8FWjLqBDVbeN7RpzY3MODqB947QHB9AyAg4UNhYBt73U\n9vO2N9u+ZtT1tMH2CbYfsv2s7Q22rxp1TW2yPc/2U7a/Pepa2mT7CNv32H7O9kbbHxl1TcMY+Tn4\noJnCf2hqSqgtktZKujjJsyMtbEi2j5V0bJJ1tg+V9KSkT036du1m+y8lnSHpsCTLRl1PW2x/TdIj\nSW4ZzCT8/iSvjbqufTUOe/DFkjYneSHJO5LukvTJEdc0tCQ/TrJu8HynpI2Sjh9tVe2wvVDS+ZJu\nGXUtbbJ9uKSzJH1FkpK8M8nhlsYj4MdLemna6y0qEoTdbJ8k6XRJj4+2ktZ8QdLnJe0adSEtO1nS\nK5JuG5x+3DKYcHRijUPAS7M9X9I3JV2d5PVR1zMs28skbUvy5Khr6cABkj4s6UtJTpf0pqSJviY0\nDgHfKumEaa8XDt6beLYP1FS4VyepMuX0EkkX2H5RU6dTZ9u+fbQltWaLpC1Jdh9p3aOpwE+scQj4\nWkmn2D55cFFjuaRvjbimodm2ps7lNiZZOep62pLk2iQLk5ykqf9XDya5dMRltSLJy5Jesr1o8NY5\nkib6ouhcmw+2Lsm7tq+U9F1J8yTdmmTDiMtqwxJJn5a03vbTg/f+NsmaEdaE2X1O0urBzuYFSZ8Z\ncT1DGfmfyQB0ZxwO0QF0hIADhRFwoDACDhRGwIHCCDhQGAEHCvtffZqNVi3MyWQAAAAASUVORK5C\nYII=\n",
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPgAAAEICAYAAAByNDmmAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADZRJREFUeJzt3X/MnXV9xvHrWoE6LJYwYMGWCNnaTmYimK6LqWNIp0Mh\nYDJjYEGZcenYwEC2xMH+WHDsj5EMIskWlw7qcPyKQ0mMYRIIMKSZrBQQLO0DCHW0AQppKD+GVsq1\nP57TrZrn4dxPz33f5zyfvl/JE86P+9yfz51ynfvHOef7dRIBqOmXxt0AgO4QcKAwAg4URsCBwgg4\nUBgBBwoj4POI7Sts3/gOz2+2fdoc1/k7tqdGbg4T6ZBxN4D/Z/v1/e4eLumnkvYO7v/JsNcn+c25\n1kzyPUkr5vq6ubJ9uKS/l/QZSYdK+kGSU7uue7Aj4BMkyaJ9t21vk/THSe7e77ErxtBWW9Zp+v+3\n90vaJenk8bZzcOAQff45zPbXbb82OCRfue8J29ts/97g9irbD9l+1faLtq+ZaWW2T7O9fb/7f2l7\nx2D9U7bXzPK6M20/Mlj/c+/05mP7NySdLWltkpeS7E2y6QC3H3NAwOefsyXdKulISd+W9A+zLHet\npGuTvEfSr0n6xrAV214h6WJJv5XkCEm/L2nbLIu/Ielzgz7OlPSntj81y7KrJP1Y0pdtv2z7cdt/\nMKwfjI6Azz8PJLkjyV5J/yrpg7Ms9zNJv2776CSvJ/l+g3XvlbRQ0km2D02yLcmPZlowyX1JHk/y\ndpLHJN0i6XdnWe9SSR+QtFvSezX9JnKD7fc36AkjIODzzwv73f4fSe+yPdO1lC9IWi5pq+2Nts8a\ntuIkT0u6VNIVknbavtX2e2da1vZv277X9ku2d0u6UNLRs6z6TU2/4fxtkj1J/kPSvZI+PqwnjIaA\nF5XkqSTnSTpW0lWSbrP97gavuznJRyS9T1IGr53JzZo+RTg+yWJJ/yTJsyz72EylhvWC0RHwomyf\nb/uYJG9LemXw8NtDXrPC9um2F0r6iab3vLO95ghJu5L8xPYqSX/4Dqu+X9J/S7rc9iG2V0v6qKQ7\n57BJOAAEvK4zJG0efLZ+raRzk7w55DULJf2dpJc1fSpwrKTLZ1n2zyT9je3XJP213uEiXpKfSTpH\n0ic1fR7+z5I+l2Rr883BgTADPgB1sQcHCiPgQGEEHCiMgAOFdfJjE9slr9wtWLCg13rLly/vrdbC\nhQt7q/X888/3VuvFF1/srVbfksz2vYP/08lV9KoBP+qoo3qtd+ed/X1MvGzZst5qXXnllb3Vuvrq\nq3ur1bcmAecQHSiMgAOFEXCgMAIOFEbAgcIIOFAYAQcKI+BAYQQcKKxRwG2fMRhC92nbl3XdFIB2\nDA247QWS/lHSJySdJOk82yd13RiA0TXZg6+S9HSSZ5Ls0fSY3Od02xaANjQJ+BJJz+13f/vgsZ9j\ne+1gJo2H2moOwGha+7loknWann+q7K/JgPmmyR58h6Tj97u/dPAYgAnXJOAbJS2zfaLtwySdq+kB\n7wFMuKGH6Enesn2xpgepXyBpfZLNnXcGYGSNzsGT3CHpjo57AdAyvskGFEbAgcIIOFAYAQcKI+BA\nYQQcKIyAA4V1MnVRVaeddlqv9VauXNlbrd27d/dW69lnn+2t1sGOPThQGAEHCiPgQGEEHCiMgAOF\nEXCgMAIOFEbAgcIIOFAYAQcKazKzyXrbO23/sI+GALSnyR78XySd0XEfADowNOBJ7pe0q4deALSs\ntV+T2V4raW1b6wMwOqYuAgrjKjpQGAEHCmvyMdktkv5T0grb221/ofu2ALShydxk5/XRCID2cYgO\nFEbAgcIIOFAYAQcKI+BAYQQcKIyAA4U5af9r41W/iz41NdVrveXLl5es9dRTT/VWq7IkHrYMe3Cg\nMAIOFEbAgcIIOFAYAQcKI+BAYQQcKIyAA4URcKAwAg4U1mRMtuNt32v7CdubbV/SR2MARtdkXPS3\nJP1FkodtHyFpk+27kjzRcW8ARtRk6qLnkzw8uP2apC2SlnTdGIDRzWlmE9snSDpF0oMzPMfURcCE\naRxw24skfVPSpUle/cXnmboImDyNrqLbPlTT4b4pybe6bQlAW5pcRbek6yVtSXJN9y0BaEuTPfhq\nSZ+VdLrtRwd/n+y4LwAtaDJ10QOShg4NA2Dy8E02oDACDhRGwIHCCDhQGAEHCiPgQGEEHCiMgAOF\nzfu5yZYtW9ZXKT355JO91epbn9t21VVX9VZr/fr1vdXqG3OTAQc5Ag4URsCBwgg4UBgBBwoj4EBh\nBBwojIADhRFwoLAmgy6+y/Z/2f7BYOqiL/fRGIDRNRkX/aeSTk/y+mD45Ads/3uS73fcG4ARNRl0\nMZJeH9w9dPDHxAbAPNB04oMFth+VtFPSXUlmnLrI9kO2H2q7SQAHplHAk+xNcrKkpZJW2f7ADMus\nS7Iyycq2mwRwYOZ0FT3JK5LulXRGN+0AaFOTq+jH2D5ycPuXJX1M0tauGwMwuiZX0Y+TdIPtBZp+\nQ/hGku902xaANjS5iv6YpucEBzDP8E02oDACDhRGwIHCCDhQGAEHCiPgQGEEHCiMgAOFNfkm20S7\n4IILxt1CCcuXL++t1vXXX99brampqd5qSdKGDRt6rTcMe3CgMAIOFEbAgcIIOFAYAQcKI+BAYQQc\nKIyAA4URcKAwAg4U1jjgg8kPHrHNgIvAPDGXPfglkrZ01QiA9jWdumippDMlXddtOwDa1HQP/hVJ\nX5L09mwLMDcZMHmazGxylqSdSTa903LMTQZMniZ78NWSzra9TdKtkk63fWOnXQFoxdCAJ7k8ydIk\nJ0g6V9I9Sc7vvDMAI+NzcKCwOQ3ZlOQ+Sfd10gmA1rEHBwoj4EBhBBwojIADhRFwoDACDhRGwIHC\nnKT9ldrtr3QWq1ev7quU7r777t5qSdJFF13UW63169f3VuvNN9/srdauXbt6qyVJS5Ys6a1WEg9b\nhj04UBgBBwoj4EBhBBwojIADhRFwoDACDhRGwIHCCDhQGAEHCms0ZNNgRNXXJO2V9BZDIwPzw1zG\nZPtokpc76wRA6zhEBwprGvBIutv2JttrZ1qAqYuAydP0EP0jSXbYPlbSXba3Jrl//wWSrJO0Tur3\n56IAZtdoD55kx+C/OyXdLmlVl00BaEeTyQffbfuIfbclfVzSD7tuDMDomhyi/6qk223vW/7mJN/t\ntCsArRga8CTPSPpgD70AaBkfkwGFEXCgMAIOFEbAgcIIOFAYAQcKI+BAYfN+6qI+bdy4sdd6K1f2\n97P73bt391Zr8eLFvdW65557eqslSWvWrOmtFlMXAQc5Ag4URsCBwgg4UBgBBwoj4EBhBBwojIAD\nhRFwoDACDhTWKOC2j7R9m+2ttrfY/nDXjQEYXdNx0a+V9N0kn7Z9mKTDO+wJQEuGBtz2YkmnSvoj\nSUqyR9KebtsC0IYmh+gnSnpJ0tdsP2L7usH46D+HqYuAydMk4IdI+pCkryY5RdIbki77xYWSrEuy\nkqmFgcnRJODbJW1P8uDg/m2aDjyACTc04ElekPSc7RWDh9ZIeqLTrgC0oulV9C9KumlwBf0ZSZ/v\nriUAbWkU8CSPSuLcGphn+CYbUBgBBwoj4EBhBBwojIADhRFwoDACDhRGwIHCmJtsgk1NTfVWa9Gi\nRb3V2rBhQ2+1Lrzwwt5qSdKuXbt6q8XcZMBBjoADhRFwoDACDhRGwIHCCDhQGAEHCiPgQGEEHChs\naMBtr7D96H5/r9q+tI/mAIxm6JhsSaYknSxJthdI2iHp9o77AtCCuR6ir5H0oyQ/7qIZAO1qOmzy\nPudKumWmJ2yvlbR25I4AtKbxHnwwJvrZkv5tpueZugiYPHM5RP+EpIeTvNhVMwDaNZeAn6dZDs8B\nTKZGAR9MF/wxSd/qth0AbWo6ddEbkn6l414AtIxvsgGFEXCgMAIOFEbAgcIIOFAYAQcKI+BAYQQc\nKKyrqYtekjTXn5QeLenl1puZDFW3je0an/clOWbYQp0E/EDYfqjqL9GqbhvbNfk4RAcKI+BAYZMU\n8HXjbqBDVbeN7ZpwE3MODqB9k7QHB9AyAg4UNhEBt32G7SnbT9u+bNz9tMH28bbvtf2E7c22Lxl3\nT22yvcD2I7a/M+5e2mT7SNu32d5qe4vtD4+7p1GM/Rx8MJnCk5oeEmq7pI2SzkvyxFgbG5Ht4yQd\nl+Rh20dI2iTpU/N9u/ax/eeSVkp6T5Kzxt1PW2zfIOl7Sa4bjCR8eJJXxt3XgZqEPfgqSU8neSbJ\nHkm3SjpnzD2NLMnzSR4e3H5N0hZJS8bbVTtsL5V0pqTrxt1Lm2wvlnSqpOslKcme+RxuaTICvkTS\nc/vd364iQdjH9gmSTpH04Hg7ac1XJH1J0tvjbqRlJ0p6SdLXBqcf1w0GHJ23JiHgpdleJOmbki5N\n8uq4+xmV7bMk7Uyyady9dOAQSR+S9NUkp0h6Q9K8viY0CQHfIen4/e4vHTw279k+VNPhvilJlSGn\nV0s62/Y2TZ9OnW77xvG21JrtkrYn2XekdZumAz9vTULAN0paZvvEwUWNcyV9e8w9jcy2NX0utyXJ\nNePupy1JLk+yNMkJmv63uifJ+WNuqxVJXpD0nO0Vg4fWSJrXF0XnOvlg65K8ZftiSXdKWiBpfZLN\nY26rDaslfVbS47YfHTz2V0nuGGNPGO6Lkm4a7GyekfT5MfczkrF/TAagO5NwiA6gIwQcKIyAA4UR\ncKAwAg4URsCBwgg4UNj/Aqs7hTZq86pjAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x114a12fd0>"
+       "<matplotlib.figure.Figure at 0x11a685748>"
       ]
      },
      "metadata": {},
@@ -152,11 +153,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 2: Investigating $k$-NN Error\n",
+    "## Exercise 2: Investigating $k$-NN Error (15%)\n",
     "\n",
     "This is a continuation of Exercise 1. Each part asks you to investigate some scenario.\n",
     "\n",
     "__Note__: For this specific data set, you might not be able to overfit with $k$-NN! So don't worry if you can't find an example of overfitting.\n",
+    "\n",
+    "__Attribution__: This exercise was adapted from DSCI 571.\n",
     "\n",
     "### 2(a) The influence of k\n",
     "\n",
@@ -171,22 +174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2(b) Fundamental Tradeoff\n",
-    "rubric={reasoning:5}\n",
-    "\n",
-    "Recall the two parts of the fundamental trade-off in machine learning:\n",
-    "\n",
-    "1. How small we can make the training error.\n",
-    "2. How well the training error approximates the test error.\n",
-    "\n",
-    "In a $k$-nearest neighbour classifier, how does the parameter $k$ affect each of the two parts of the trade-off? What is one way that we could choose $k$ in practice?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2(c) The influence of data partition\n",
+    "### 2(b) The influence of data partition\n",
     "\n",
     "rubric={reasoning:5}\n",
     "\n",
@@ -195,46 +183,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2(d) Imbalanced training data\n",
-    "\n",
-    "rubric={reasoning:5, code:5}\n",
-    "\n",
-    "Now, take a subset of your training data so that you only retain the first 2% of the examples of digits 0-8, but keep 100% of the 9's. This is called an imbalanced training set. \n",
-    "\n",
-    "What is your training and test error, vs. $k$? How does it compare to your performance with all the data?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "### 2(e) Imbalanced training data -- fair (Optional)\n",
-    "\n",
-    "What we did in (d) above was an unfair comparison, because reducing the amount of training data will generally hurt performance. To compare, randomly remove examples from the original training set such that the number of examples is the same as in part (d) above. Now compare the training and test error to the results from (d). Briefly comment on the results. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 2(f) The influence of added noise (Optional; no marks)\n",
-    "\n",
-    "__This question is worth no marks.__\n",
-    "\n",
-    "Now, add noise to the training data: for each example, with probability 20% replace the training label with a label selected uniformly at random. Remake the plot vs. $k$. What do you observe? Is there a generalizable insight here?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "## 3 Loess\n",
+    "## Exercise 3: Loess (50%)\n",
     "\n",
     "We'll use the Titanic data set to try and predict survival of passengers (`Survival`) from `Age`, `Fare`, and `Sex`, using loess. You might find it useful to log-transform `Fare`. The data have been split into a training and test set in the files `titanic_train.csv` and `titanic_test.csv` in the `data` folder. Details of the data can be found at https://www.kaggle.com/c/titanic/data.\n",
     "\n",
@@ -258,16 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3(b) Missing Prediction\n",
-    "\n",
-    "It's possible that loess won't predict anything for a certain observation on the test set. In what situation will this happen, and why? Could this also be the case for $k$-NN?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3(c) Regression\n",
+    "### 3(b) Regression\n",
     "\n",
     "Fit a loess model to the training data for various values of the bandwidth parameter. Plot the mean squared error (MSE) on the training and test sets, and plot these across bandwidth. How does the training error curve differ from the training error curve, and why? From this plot, using the \"validation set approach\" for choosing hyperparameters, what bandwidth is appropriate?"
    ]
@@ -276,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3(d) Classification\n",
+    "### 3(c) Classification\n",
     "\n",
     "Like you just did, fit a loess model to the training data for various values of the bandwidth parameter, but then add a classification step: predict survival if the probability of survival is greater than 0.5. Plot the error rate on the training and test sets, and plot these across bandwidth. How does the training error curve differ from the training error curve, and why? From this plot, using the \"validation set approach\" for choosing hyperparameters, what bandwidth is appropriate? Do you get similar results when you considered the MSE in the regression case above?"
    ]
@@ -285,9 +229,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3(e) $k$-NN\n",
+    "### 3(d) $k$-NN\n",
     "\n",
     "Try the above classification exercise, but using $k$-NN. Plot the error rate on the training and test sets, and plot these across $k$. How does the training error curve differ from the training error curve, and why? From this plot, using the \"validation set approach\" for choosing hyperparameters, what $k$ is appropriate? How does the error compare with loess? Which would you choose, loess or $k$-NN?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4: Concepts (10%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4(a) Missing Prediction\n",
+    "\n",
+    "It's possible that loess won't predict anything for a certain observation on the test set. In what situation will this happen, and why? Could this also be the case for $k$-NN?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### 4(b) Fundamental tradeoff\n",
+    "\n",
+    "How do the bandwidth and $k$ hyperparameters in loess and $k$-NN influence the bias/variance tradeoff? Use two brief sentences."
    ]
   },
   {
@@ -317,7 +288,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
