Allow for any language

--- a/assessments/assignment1/assignment1.ipynb
+++ b/assessments/assignment1/assignment1.ipynb
@@ -18,8 +18,9 @@
     "## Instructions (5%)\n",
     "\n",
     "- You must use proper spelling and grammar.\n",
-    "- Add your responses to the questions in this very jupyter notebook. \n",
-    "- Submit your assignment through [UBC Connect](https://connect.ubc.ca/) by the deadline, being sure to upload your jupyter notebook file."
+    "- Use either R or python to complete this assignment (or both). \n",
+    "- Submit your assignment through [UBC Connect](https://connect.ubc.ca/) by the deadline. \n",
+    "- If you submit more than one file for your assignment, be sure to also include a README file to inform the grader of how to navigate your solutions."
    ]
   },
   {
