--- a/class_meetings/cm01-intro.Rmd
+++ b/class_meetings/cm01-intro.Rmd
@@ -16,7 +16,7 @@ output:
 suppressPackageStartupMessages(library(knitr))
 suppressPackageStartupMessages(library(tidyverse))
 suppressPackageStartupMessages(library(ISLR))
-opts_chunk$set(echo=FALSE, fig.width=5, fig.height=3, fig.align="center")
+opts_chunk$set(fig.width=5, fig.height=3, fig.align="center")
 ```
 
 
@@ -161,10 +161,11 @@ __Note__: Done early? Head to the "Lab" section of these course notes for additi
 3. __Watch BAIT509__: Navigate to the [BAIT509 github page](https://github.com/vincenzocoia/BAIT509), and click "Watch" -> "Watching" (in the upper-right corner of the page). 
     - This will notify you by email whenever a new issue comment is made. We'll be using issues for remote discussion about course material and assignments. 
 4. __Set up your own BAIT509 repo__ (repo="repository"): You'll use this repo to put your in-class work, and notes. You can do this in one of two ways:
-    1. Maintain your own copy of the main BAIT 509 repo (\*__recommended__\*), by [`Fork`ing](https://help.github.com/articles/fork-a-repo/) the main BAIT509 repo. 
+    1. Maintain your own copy of the main BAIT 509 repo ~~(\*__recommended__\*)~~, by [`Fork`ing](https://help.github.com/articles/fork-a-repo/) the main BAIT509 repo. 
         - There's a button for this at the top-right corner of the main BAIT 509 repo page. 
         - This is useful so you can [keep your fork synced](https://help.github.com/articles/fork-a-repo/#keep-your-fork-synced) as the main repo evolves throughout the course -- more on this later. 
     2. Start fresh and create a new blank repo.
+        - On second thought, I would recommend this if git and github are new to you.
 5. __Add to your repo__: On your new BAIT 509 repo, add a new folder for you to put your in-class exercises, seeded with a README file. To do this for a folder called `my_folder`:
     1. Click "Create New File" on the main repo page.
     2. In the file name, type `my_folder/README.md`. Populate the contents with a brief description of what this folder will be used for (a one-liner is fine).
@@ -214,7 +215,7 @@ What is Machine Learning (ML) (or Statistical Learning)? As the [ISLR book](http
 
 You've already seen examples throughout MBAN. For example, consider trying to predict someone's wage (output) based on their age (input). Using the `Wage` data set from the `ISLR` R package, here are examples of inputs and outputs:
 
-```{r}
+```{r, echo=FALSE}
 Wage %>% 
     select(age, wage) %>% 
     head %>%
@@ -226,7 +227,7 @@ We try to model the relationship between age and wage so that we can predict the
 
 An example supervised learning technique is _linear regression_, which you've seen before in BABS 507/508. For an age `x`, let's use linear regression to make a prediction that's quadratic in `x`. Here's the fit:
 
-```{r}
+```{r, echo=FALSE}
 ggplot(Wage, aes(age, wage)) +
     geom_point(alpha=0.2) +
     geom_smooth(method="lm", se=FALSE,
@@ -243,7 +244,7 @@ The blue curve represents our attempt to "re-construct" the black box by learnin
 
 For example, consider the following two gene expression measurements (actually two principal components). Are there groups that we can identify here?
 
-```{r}
+```{r, echo=FALSE}
 NCI60[[1]] %>% 
     prcomp() %>% 
     `[[`("x") %>% 
@@ -306,7 +307,7 @@ Let's explore this notion. When we hypothetically have an infinite amount of dat
 
 __Example__: Let's say $(X,Y)$ follows a (known) bivariate Normal distribution. Then, for any input of $X$, $Y$ has a _distribution_. Here are some examples of this distribution for a few values of the predictor variable (these are called _conditional_ distributions, because they're conditional on observing particular values of the predictors).
 
-```{r, fig.width=6}
+```{r, fig.width=6, echo=FALSE}
 xvals <- c(-1.5, 0, 3)
 ggplot(tibble(x=c(-5,7)), aes(x)) +
     stat_function(fun=function(x) dnorm(x, xvals[1]),
@@ -336,7 +337,7 @@ In Class Meeting 07, we'll look at different options besides the mean and the mo
 
 An important concept is that _predictors give us more information about the response_, leading to a more certain distribution. In the above example, let's try to make a prediction when we don't have knowledge of predictors. Here's what the distribution of the response looks like:
 
-```{r, fig.width=6}
+```{r, fig.width=6, echo=FALSE}
 ggplot(tibble(x=c(-5,7)), aes(x)) +
     stat_function(fun=function(x) dnorm(x, sd=2),
                   geom="area", fill="gray", alpha=0.5) +
@@ -361,7 +362,7 @@ $$ Y \mid X_1=x_1 \sim N(5-x_1, 5). $$
 - The conditional distribution of $Y$ given _only_ $X_2$ is
 $$ Y \mid X_2=x_2 \sim N(5+2x_2, 2). $$
 - The (marginal) distribution of $Y$ (not given any of the predictors) is
-$$ Y \sim N(0, 6). $$
+$$ Y \sim N(5, 6). $$
 
 The following R function generates data from the joint distribution of $(X_1, X_2, Y)$. It takes a single positive integer as an input, representing the sample size, and returns a `tibble` (a fancy version of a data frame) with columns named `x1`, `x2`, and `y`, corresponding to the random vector $(X_1, X_2, Y)$, with realizations given in the rows. 
 
@@ -378,7 +379,7 @@ genreg <- function(n){
 
 1. Generate data -- as much as you'd like.
 
-```{r}
+```{r, echo=TRUE}
 dat <- genreg(1000)
 ```
 
@@ -389,7 +390,7 @@ dat <- genreg(1000)
     3. Using only the values of $X_2$.
     4. Using neither the values of $X_1$ nor $X_2$. (Your predictions in this case will be the same every time -- what is that number?)
     
-```{r}
+```{r, echo=TRUE}
 dat <- mutate(dat,
        yhat = 5,
        yhat1 = 5-x1,
@@ -401,17 +402,24 @@ dat <- mutate(dat,
 3. Now use the actual outcomes of $Y$ to calculate the mean squared error (MSE) for each of the four situations. 
     - Try re-running the simulation with a new batch of data. Do your MSE's change much? If so, choose a larger sample so that these numbers are more stable.
     
-```{r}
+```{r, echo=TRUE}
 (mse <- mean((dat$yhat - dat$y)^2))
 (mse1 <- mean((dat$yhat1 - dat$y)^2))
 (mse2 <- mean((dat$yhat2 - dat$y)^2))
 (mse12 <- mean((dat$yhat12 - dat$y)^2))
+knitr::kable(tribble(
+    ~ Case, ~ MSE,
+    "No predictors", mse,
+    "Only X1", mse1,
+    "Only X2", mse2,
+    "Both X1 and X2", mse12
+))
 ```
 
     
-
 4. Order the situations from "best forecaster" to "worst forecaster". Why do we see this order?
 
+> They're ordered from worst to best in the above table. Adding more predictors reduces the error. Adding $X_2$ is better than adding $X_1$ (as seen by the lower MSE), because it's carries more information about $Y$ (i.e., it's more dependent with $Y$ than $X_1$ is).
 
 
 
@@ -438,9 +446,9 @@ Here's an R function to generate data for you, where $X\sim N(0,1)$. As before, 
 gencla <- function(n) {
     x <- rnorm(n) 
     pB <- 0.8/(1+exp(-x))
-    y <- map_chr(pB, function(x) 
+    y <- map_chr(pB, function(t) 
             sample(LETTERS[1:3], size=1, replace=TRUE,
-                   prob=c(0.2, x, 1-x)))
+                   prob=c(0.2, t, 1-t-0.2)))
     tibble(x=x, y=y)
 }
 ```
@@ -448,10 +456,51 @@ gencla <- function(n) {
 
 1. Calculate the probabilities of each category when $X=1$. What about when $X=-2$? With this information, what would you classify $Y$ as in both cases?
     - BONUS: Plot these two conditional distributions. 
+
+```{r}
+## X=1:
+(pB <- 0.8/(1+exp(-1)))
+(pA <- 0.2)
+(pC <- 1 - pB - pA)
+ggplot(tibble(p=c(pA,pB,pC), y=LETTERS[1:3]), aes(y, p)) +
+    geom_col() +
+    theme_bw() +
+    labs(y="Probabilities", title="X=1")
+## X=-2
+(pB <- 0.8/(1+exp(-(-2))))
+(pA <- 0.2)
+(pC <- 1 - pB - pA)
+ggplot(tibble(p=c(pA,pB,pC), y=LETTERS[1:3]), aes(y, p)) +
+    geom_col() +
+    theme_bw() +
+    labs("Probabilities", title="X=-2")
+```
+
+> When $X=1$, _B_ has the highest probability, so we predict that. When $X=-2$, _C_ has the highest probability, so we predict that.
+
 2. In general, when would you classify $Y$ as _A_? _B_? _C_?
+
+> For any $X<0$, the probability of _C_ will be the largest, so we predict that. For any $X>0$, the probability of _B_ will be the largest, so we predict that.
+
 3. Generate data -- as much as you'd like.
+
+```{r}
+dat2 <- gencla(1000)
+```
+
 4. For now, ignore the $Y$ data. Make predictions on $Y$ from $X$.
+
+```{r}
+dat2$yhat <- if_else(dat2$x<0, "C", "B")
+```
+
+
 5. Now, using the true $Y$ values, calculate the error rate. What type of accuracy do you get?
+
+```{r}
+1-mean(dat2$yhat == dat2$y)
+```
+
 
 ## (BONUS) Random prediction
 
