--- a/assessments/assignment1/assignment1.ipynb
+++ b/assessments/assignment1/assignment1.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# BAIT 509 Assignment 1\n",
     "\n",
-    "__Evaluates__: Class meetings 01, 02, and 03. \n",
+    "__Evaluates__: Class meetings 01-04. \n",
     "\n",
-    "__Due__: Wednesday, March 7 at 10:00am (i.e., the start of Class Meeting 04).\n",
+    "__Due__: Wednesday, March 12 at 10:00am (i.e., the start of Class Meeting 05).\n",
     "\n",
     "__Rubrics__: The MDS rubrics provide a good guide as to what is expected of you in your responses to the assignment questions. In particular, here are the most relevant ones:\n",
     "\n",
