--- a/assessments/assignment1/assignment1.ipynb
+++ b/assessments/assignment1/assignment1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "__Evaluates__: Class meetings 01-04. \n",
     "\n",
-    "__Due__: Wednesday, March 12 at 10:00am (i.e., the start of Class Meeting 05).\n",
+    "__Due__: ~~Wednesday~~ Monday, March 12 at 10:00am (i.e., the start of Class Meeting 05).\n",
     "\n",
     "__Rubrics__: The MDS rubrics provide a good guide as to what is expected of you in your responses to the assignment questions. In particular, here are the most relevant ones:\n",
     "\n",
