--- a/assessments/assignment1/assignment1.ipynb
+++ b/assessments/assignment1/assignment1.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "__Evaluates__: Class meetings 01-04. \n",
     "\n",
-    "__Due__: ~~Wednesday~~ Monday, March 12 at 10:00am (i.e., the start of Class Meeting 05).\n",
+    "__Due__: Monday, March 12 at 24:00.\n",
     "\n",
     "__Rubrics__: The MDS rubrics provide a good guide as to what is expected of you in your responses to the assignment questions. In particular, here are the most relevant ones:\n",
     "\n",
@@ -230,7 +230,7 @@
    "source": [
     "### 3(d) $k$-NN\n",
     "\n",
-    "Try the above classification exercise, but using $k$-NN. Plot the error rate on the training and test sets, and plot these across $k$. How does the training error curve differ from the training error curve, and why? From this plot, using the \"validation set approach\" for choosing hyperparameters, what $k$ is appropriate? How does the error compare with loess? Which would you choose, loess or $k$-NN?"
+    "Try the above classification exercise, but using $k$-NN. Plot the error rate on the training and test sets, and plot these across $k$. How does the training error curve differ from the ~~training~~ test error curve, and why? From this plot, using the \"validation set approach\" for choosing hyperparameters, what $k$ is appropriate? How does the error compare with loess? Which would you choose, loess or $k$-NN?"
    ]
   },
   {
