--- a/assessments/assignment3/assignment3.ipynb
+++ b/assessments/assignment3/assignment3.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# BAIT 509 Assignment 3\n",
     "\n",
-    "__Evaluates__: Class meetings 07, 08, and 09.\n",
+    "__Evaluates__: Class meetings 08 and 09.\n",
     "\n",
     "__Due__: Wednesday, March 28 at 10:00am (i.e., the start of Class Meeting 10).\n",
     "\n",
@@ -124,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -165,6 +167,7 @@
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -386,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
